# blockchain-project

./: .gitignore  ARCHITECTURE-EXPLAINED.md  BLOCKCHAIN-CORE-ARCHITECTURE.md  CORE-STATUS.md  CPP-CLEANUP-COMPLETE.md  Cargo.toml  DEPLOYMENT-GUIDE.md  DEPLOYMENT-STATUS.md  DNS-SETUP.md  GENESIS-UPDATE.md  HYBRID-ARCHITECTURE-STATUS.md  LAUNCH-PLAN.md  MINING-COMPLETE.md  PHASE-2-COMPLETE.md  PHASE-3A-COMPLETE.md  PRODUCTION-ARCHITECTURE.md  PRODUCTION-STATUS.md  PROJECT-COMPLETE.md  README.md  ROUTER-SETUP.md  SECURITY-STATUS.md  SIGNATURE-HASH-FIX-COMPLETE.md  SMART-CONTRACTS-PHASE-3A.md  SYSTEM-ARCHITECTURE.md  TRANSACTION-BUG-FIXED.md  TREASURY-SYSTEM.md  build.sh  cleanup_project.sh  consensus_demo.sh  create_demo_transactions.sh  create_transactions.sh  deploy-to-server.sh  edunet-web.db-shm  fix_cpp_ffi.sh  generate_voucher_pdf.sh  generate_vouchers.sh  launch.sh  live_demo.rs  live_deployment_demo.sh  multi_node_demo.sh  (+16 more)
blockchain-node/: Cargo.toml
blockchain-node/src/: blockchain.rs  main.rs  miner.rs  treasury.rs
cleanup_backup_20251209_205555/: ARCHITECTURE-REFACTOR.md  Cargo.toml  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE-ISP.md  DEPLOYMENT-SUMMARY.md  FINAL-DEPLOYMENT-READY.md  FRONTEND-INTEGRATION-COMPLETE.md  HOME-SERVER-SETUP.md  IMPLEMENTATION-SUMMARY.md  MULTI-USER-SYSTEM.md  PRODUCTION-READY.md  PRODUCTION-STATUS.md  REMOTE-DEPLOYMENT-GUIDE.md  SEPARATED-ARCHITECTURE-COMPLETE.md  SEPARATED-ARCHITECTURE-README.md  SYSTEM-FLOW-DOCUMENTATION.md  TODO-IMPROVEMENTS.md  TRANSACTION-PROCESSING-COMPLETE.md  create_real_genesis_transactions.rs  demo.sh  deploy-home-server.sh  deploy-separated.sh  deploy-to-remote-server.sh  edunet_gui.ipynb  home-server-deploy.sh  init_blockchain_db.py  multi_user_demo.sh  quick-deploy.sh  run-node.sh  send_real_transactions.sh  simple_test.html  test-separated-locally.sh  test_complete_flow.sh  test_send_transaction.sh  test_transaction_processing.sh  test_transactions.html
cleanup_backup_20251209_205555/docs/: bootstrap-server-setup.sh  web-blockchain-client.js
cleanup_backup_20251209_205555/edunet-gui/: Cargo.toml
cleanup_backup_20251209_205555/edunet-gui/migrations/: 002_production_schema.sql
cleanup_backup_20251209_205555/edunet-gui/src/: blockchain_integration.rs  main.rs  main_complex.rs
cleanup_backup_20251209_205555/edunet-gui/static/css/: styles.css
cleanup_backup_20251209_205555/edunet-gui/static/js/: dashboard.js  marketplace.js  shared.js
cleanup_backup_20251209_205555/edunet-gui/templates/: blockchain_explorer.html  dashboard.html  marketplace.html
cleanup_backup_20251209_205555/real-tx-demo/: Cargo.toml
cleanup_backup_20251209_205555/real-tx-demo/src/: create_genesis.rs  main.rs
cleanup_backup_20251209_205555/rpc_demo/: api_demo.rs
cleanup_backup_20251209_205555/shared/bindings/: rust_ffi.h
cleanup_backup_20251209_205555/tx-qr-gen/: Cargo.toml
cleanup_backup_20251209_205555/tx-qr-gen/src/: main.rs
cleanup_backup_20251209_205555/tx-qr-gen/vouchers/: INSTRUCTIONS.md
cleanup_backup_20251209_205555/tx-qr-gen/vouchers/qr_codes/: EDUNET-0001.txt  EDUNET-0002.txt  EDUNET-0003.txt  EDUNET-0004.txt  EDUNET-0008.txt  EDUNET-0011.txt  EDUNET-0012.txt  EDUNET-0014.txt  EDUNET-0017.txt  EDUNET-0018.txt  EDUNET-0019.txt  EDUNET-0020.txt  EDUNET-0021.txt  EDUNET-0023.txt  EDUNET-0026.txt  EDUNET-0027.txt  EDUNET-0031.txt  EDUNET-0032.txt  EDUNET-0033.txt  (+36 more)
cleanup_backup_20251209_205555/voucher-qr-codes/: vouchers.html
cpp-core/: CMakeLists.txt
cpp-core/include/blockchain/: block.hpp  consensus.hpp  core.hpp  crypto.hpp  hybrid_consensus.hpp  simple_consensus.hpp  storage.hpp  storage_config.hpp  transaction.hpp  vm.hpp
cpp-core/include/ffi/: blockchain_ffi.h  consensus_ffi.h
cpp-core/src/blockchain/: block.cpp  transaction.cpp
cpp-core/src/consensus/: consensus.cpp  consensus_structure_test.cpp  hybrid_consensus.cpp  hybrid_consensus_test.cpp  simple_consensus.cpp  simple_hybrid_test.cpp
cpp-core/src/crypto/: crypto.cpp
cpp-core/src/ffi/: Attached HTML and CSS Context  blockchain_ffi.cpp  consensus_ffi.cpp  vm_ffi.cpp
cpp-core/src/storage/: memory_storage.cpp  simple_storage_test.cpp  storage.cpp  storage_test.cpp  storage_utils.cpp
cpp-core/src/vm/: vm.cpp  vm_test.cpp
cpp-core/tests/: crypto_test.cpp  storage_test.cpp
edunet-web/: Cargo.toml
edunet-web/migrations/: 001_init.sql  002_vouchers.sql  003_marketplace_nfts_loans.sql
edunet-web/src/: blockchain_integration.rs  database.rs  main.rs  user_auth.rs  wallet.rs
edunet-web/static/: styles.css
edunet-web/static/js/: loan.js  marketplace.js  nft.js  wallet.js
edunet-web/templates/: architecture.html  invest.html  login.html  marketplace.html  register.html  users_overview.html
rust-system/: Cargo.toml
rust-system/blockchain-consensus-ffi/: Cargo.toml  build.rs
rust-system/blockchain-consensus-ffi/src/: lib.rs
rust-system/blockchain-core/: Cargo.toml
rust-system/blockchain-core/examples/: api_server_demo.rs  hd_wallet_demo.rs  simple_api_demo.rs
rust-system/blockchain-core/src/: advanced_wallet.rs  api_server.rs  api_server_methods.rs  block.rs  consensus.rs  contracts.rs  crypto.rs  event_indexer.rs  genesis.rs  hd_wallet.rs  lib.rs  mempool.rs  mining.rs  mining_controller.rs  rest_api.rs  script_utils.rs  simple_mining.rs  storage.rs  sync.rs  transaction.rs  tx_builder.rs  utxo.rs  wallet.rs
rust-system/blockchain-core/tests/: integration_test.rs  simple_test.rs
rust-system/blockchain-crypto/: Cargo.toml
rust-system/blockchain-crypto/src/: lib.rs
rust-system/blockchain-ffi/: Cargo.toml  build.rs
rust-system/blockchain-ffi/src/: consensus.rs  crypto.rs  error.rs  lib.rs  storage.rs  types.rs  vm.rs
rust-system/blockchain-ffi/tests/: integration_test.rs
rust-system/blockchain-network/: Cargo.toml
rust-system/blockchain-network/src/: discovery.rs  lib.rs  lib_old.rs  peer.rs  peer_old.rs  protocol.rs  swarm.rs  tx_broadcast.rs
rust-system/blockchain-network/tests/: network_test.rs
rust-system/blockchain-rpc/: Cargo.toml
rust-system/blockchain-rpc/src/: client.rs  lib.rs  server.rs
(+175 files in other folders)
