[workspace]
resolver = "2"
members = [
    "rust-system/blockchain-core",      # Pure Rust blockchain core
    "rust-system/blockchain-network",   # P2P networking
    "rust-system/blockchain-rpc",       # RPC interface
    "blockchain-node",                  # Full node daemon (for miners/validators)
    "edunet-web",                       # Web interface (for users)
    "voucher-pdf-gen",                  # Voucher QR generator
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EduNet Blockchain Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hectobyte1024/blockchain-project"

[workspace.dependencies]
# Async runtime and networking
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "mplex", "websocket", "ping", "mdns"] }

# HTTP server and client
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
secp256k1 = { version = "0.28", features = ["global-context", "rand-std"] }
rand = "0.8"
ed25519-dalek = "2.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.2"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
bs58 = "0.5"
chrono = "0.4"

# QR code generation
qrcode = "0.14"

# FFI
libc = "0.2"

# Build dependencies (for FFI)
bindgen = "0.69"
cmake = "0.1"
cbindgen = "0.26"
