[workspace]
resolver = "2"
members = [
    "rust-system/blockchain-ffi",
    "rust-system/blockchain-network",
    "rust-system/blockchain-rpc",    # NEW: RPC interface
    "blockchain-node",                # NEW: Blockchain node binary
    "edunet-web",                     # NEW: Web client binary
    "edunet-gui",                     # OLD: Keep for now (deprecated)
    "tx-qr-gen",
    "real-tx-demo",
    "voucher-pdf-gen",               # NEW: Voucher PDF generator
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Blockchain Developer <dev@blockchain.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blockchain/hybrid-blockchain"
homepage = "https://blockchain.dev"

[workspace.dependencies]
# Async runtime and networking
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "mplex", "websocket", "ping", "mdns"] }
quinn = "0.10" # QUIC protocol
rustls = "0.21"

# Serialization 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
postcard = "1.0"

# Cryptography
sha2 = "0.10"
ripemd = "0.1" 
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
rand_core = "0.6"

# Encoding
hex = "0.4"
base58 = "0.2"
bech32 = "0.9"

# Database
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# CLI and config
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Web framework
axum = "0.7"
hyper = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Testing and benchmarking  
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"

# FFI integration
bindgen = "0.69"
cbindgen = "0.26"
cmake = "0.1"

# Development dependencies
[workspace.dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"
tokio-test = "0.4"

# Profile optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]  
opt-level = 3
debug = false
lto = true

