[package]
name = "real-tx-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_genesis"
path = "src/create_genesis.rs"

[dependencies]
blockchain-core = { path = "../rust-system/blockchain-core" }
blockchain-ffi = { path = "../rust-system/blockchain-ffi" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"
chrono = "0.4"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
