[package]
name = "blockchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex.workspace = true
secp256k1.workspace = true
rand.workspace = true

# Core dependencies
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
blake3 = "1.5"
hmac = "0.12"

# Wallet dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
bs58 = "0.5"
urlencoding = "2.1"
qrcode = "0.14"
image = "0.24"
base64 = "0.21"

# Mining dependencies  
hostname = "0.3"
num_cpus = "1.16"

# Smart Contract dependencies
revm = { version = "14", features = ["std", "secp256k1"] }
revm-primitives = "9"

# API Server dependencies
md5 = "0.7"