[package]
name = "blockchain-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core blockchain types
blockchain-core = { path = "../blockchain-core" }

# Async networking
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Error handling and logging
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Utilities
hex.workspace = true
rand.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]