[package]
name = "blockchain-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
blockchain-core = { path = "../blockchain-core" }

# RPC framework
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-derive = "18.0"

# Async & serialization
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Additional dependencies
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
